Wokring on Board Class

--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./dist/main.css" />
+    <!-- <link rel="stylesheet" href="./dist/main.css" /> -->
+    <link rel="stylesheet" href="./src/styles/board.css">
     <script src="./dist/main.js"></script>
     <title>Wrestling Card Game</title>
   </head>
 
   <body>
-    <div id="main"></div>
+    <!-- <div id="main"></div> -->
+    <div id="board"></div>
   </body>
 
 </html>
