--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <!-- <link rel="stylesheet" href="./dist/main.css" /> -->
     <link rel="stylesheet" href="./src/styles/board.css">
+    <link rel="icon" href="favicon.ico">
     <script src="./dist/main.js"></script>
     <title>Wrestling Card Game</title>
   </head>
