--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <!-- <link rel="stylesheet" href="./dist/main.css" /> -->
     <link rel="stylesheet" href="./src/styles/board.css">
-    <link rel="icon" href="favicon.ico">
+    <link rel="stylesheet" href="./src/styles/card.css">
+    <link rel="icon" href="./src/styles/favicon.ico">
     <script src="./dist/main.js"></script>
-    <title>Wrestling Card Game</title>
+    <title>SRG Supershow Game</title>
   </head>
 
   <body>
     <!-- <div id="main"></div> -->
-    <div id="board"></div>
+    <div id="boardOne"></div>
   </body>
 
 </html>
