--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <body>
     <!-- <div id="main"></div> -->
     <div id="boardOne"></div>
+    <div id="boardTwo"></div>
+
   </body>
 
 </html>
