Started modals for invalid moves and win

--- a/index.html
+++ b/index.html
@@ -41,11 +41,12 @@
       <img src="/WrestlingCardGame/images/SRG Universe Logo - Transparent.png">
       <h2>Welcome to the Supershow!</h2>
       <p>Rules of Supershow</p>
-      <p>On your turn you can...</p>
-      <li>Play a LEAD at any time</li>
-      <li>Play a Follow Up if you have a LEAD in play</li>
-      <li>Play a FINISH if you have a Follow Up in play </li>
-      <p>Repeat the steps above until we have a winner!!</p>
+      <p>Each player takes a turn playing a card</p>
+      <p>On your turn you can</p>
+      <li>Play a LEAD move</li>
+      <li>Play a FOLLOW UP if you have a LEAD in play</li>
+      <li>Play a FINISH if you have a FOLLOW UP in play </li>
+      <p>Repeat the steps above until someone hits a finisher and wins!!</p>
       <button type="button" id="closeButton">CLOSE</button>
     </div>
   
@@ -59,7 +60,9 @@
     <!-- <div id="main"></div> -->
     <div id="boardOne"></div>
     <div id="invalidMove"> Invalid Move!</div>
-    <div id="notCurrentPlayer"> Not the current player!</div>
+    <div id="noLead"> you need a LEAD in play!</div>
+    <div id="noFollowUp"> you need a FOLLOW UP in play!</div>
+    <div id="notCurrentPlayer"> Sorry! You are not the current player!</div>
     <div id="winner">YOU WIN!!</div>
     <div id="boardTwo"></div>
     
