July 6th Presentation

--- a/index.html
+++ b/index.html
@@ -39,10 +39,15 @@
     <button id="openPopup" type="submit" class="btn" > RULES </button>
     <div class="popup" id="popup">
       <img src="/WrestlingCardGame/images/SRG Universe Logo - Transparent.png">
-      <h2>Welcome to the Supershow!</h2>
+      <h2>Welcome to the Legendary Fighting Federation!</h2>
+      
+      <p>How to play the game</p>
+      <li>Select a card in your hand </li>
+      <li>Select the corresponding zone</li>
       <p>Rules of Supershow</p>
       <p>Each player takes a turn playing a card</p>
       <p>On your turn you can</p>
+
       <li>Play a LEAD move</li>
       <li>Play a FOLLOW UP if you have a LEAD in play</li>
       <li>Play a FINISH if you have a FOLLOW UP in play </li>
