--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <div >
     <button id="openPopup" type="submit" class="btn" > RULES </button>
     <div class="popup" id="popup">
-      <img src="/WrestlingCardGame/images/SRG Universe Logo - Transparent.png">
+      <img src="./images/SRG Universe Logo - Transparent.png">
       <h2>Welcome to the Legendary Fighting Federation!</h2>
       
       <p>How to play the game</p>
