rules button modification

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </p>
   
   <div >
-    <button id="openPopup" type="submit" class="btn" > RULES </button>
+    
     <div class="popup" id="popup">
       <img src="./images/SRG Universe Logo - Transparent.png">
       <h2>Welcome to the Legendary Fighting Federation!</h2>
@@ -68,7 +68,9 @@
   
   <body>
     <!-- <div id="main"></div> -->
-    <div id="boardOne"></div>
+    <div id="boardOne">
+      <button id="openPopup" type="submit" class="btn" > RULES </button>
+    </div>
     <div id="boardTwo"></div>
     
   </body>
